@@ -119,16 +119,16 @@ private:
   virtual uint32_t GetSegSize (void) const = 0;
 
   /**
-   * \brief Set the Slow Start Threshold.
+   * \brief Set the initial Slow Start Threshold.
    * \param threshold the Slow Start Threshold (in bytes)
    */
-  virtual void SetSSThresh (uint32_t threshold) = 0;
+  virtual void SetInitialSSThresh (uint32_t threshold) = 0;
 
   /**
-   * \brief Get the Slow Start Threshold.
+   * \brief Get the initial Slow Start Threshold.
    * \returns the Slow Start Threshold (in bytes)
    */
-  virtual uint32_t GetSSThresh (void) const = 0;
+  virtual uint32_t GetInitialSSThresh (void) const = 0;
 
   /**
    * \brief Set the initial Congestion Window.
